--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -22,8 +22,10 @@
     <script src="/node_modules/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
     <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+    <script src="/node_modules/hammerjs/hammer.min.js"></script>
     <!-- Clean UI Scripts -->
     <script src="/node_modules/angular/angular.min.js"></script>
+    <script src="/node_modules/angular-hammer/angular.hammer.min.js"></script>
     <script src="/node_modules/jquery.scrollto/jquery.scrollTo.min.js"></script>
     <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
     <script src="/node_modules/jquery-sortable/source/js/jquery-sortable-min.js"></script>
@@ -461,10 +463,11 @@
                         <div class="o-wrapper-attributes hidden-md-up">
 
                             <nav class="c-menu c-menu--slide-bottom">
-                                <div class="slide-down-button" ng-click="openHideAttributesCategoriesFilterMenu()">
-                                    <button style="margin-top: -10px" id="characteristics">Производные</button>
-                                    <i class="fa fa-angle-double-down" ng-hide="isCategoryAttributesMenuClose"></i>
-                                    <i class="fa fa-angle-double-up" ng-show="isCategoryAttributesMenuClose"></i>
+                                <div class="slide-down-button">
+                                    <button class="btn slide-button" id="characteristics" ng-click="openHideAttributesCategoriesFilterMenu()"
+                                            hm-swipeup="openHideAttributesCategoriesFilterMenu()" hm-swipedown="openHideAttributesCategoriesFilterMenu()">Производные
+                                        <i class="fa fa-angle-double-down" ng-hide="isCategoryAttributesMenuClose"></i>
+                                        <i class="fa fa-angle-double-up" ng-show="isCategoryAttributesMenuClose"></i></button>
                                 </div>
                                 <hr/>
                                 <div class="row" style="margin-top: 20px">
@@ -668,7 +671,7 @@
                         <div class="o-wrapper-attached-skills hidden-md-up">
 
                             <nav class="c-menu c-menu--slide-bottom">
-                                <div class="slide-down-button" ng-click="openHideAttachedSkillsCategoriesFilerMenu()">
+                                <div class="slide-down-button" ng-click="openHideAttachedSkillsCategoriesFilerMenu()" hm-swipeup="openHideAttachedSkillsCategoriesFilerMenu()" hm-swipedown="openHideAttachedSkillsCategoriesFilerMenu()">
                                     Категория
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryAttachedSkillsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryAttachedSkillsMenuClose"></i>
@@ -940,7 +943,7 @@
                         <div class="o-wrapper-trigger-skills hidden-md-up">
 
                             <nav class="c-menu c-menu--slide-bottom">
-                                <div class="slide-down-button" ng-click="openHideTriggerSkillsCategoriesFilerMenu()">
+                                <div class="slide-down-button" ng-click="openHideTriggerSkillsCategoriesFilerMenu()" hm-swipeup="openHideTriggerSkillsCategoriesFilerMenu()" hm-swipedown="openHideTriggerSkillsCategoriesFilerMenu()">
                                     Категория
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryTriggerSkillsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryTriggerSkillsMenuClose"></i>
@@ -1203,7 +1206,7 @@
                         <div class="o-wrapper-merits hidden-md-up">
 
                             <nav class="c-menu c-menu--slide-bottom">
-                                <div class="slide-down-button" ng-click="openHideMeritsCategoriesFilterMenu()">
+                                <div class="slide-down-button" ng-click="openHideMeritsCategoriesFilterMenu()" hm-swipeup="openHideMeritsCategoriesFilterMenu()" hm-swipedown="openHideMeritsCategoriesFilterMenu()">
                                     Категория
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryMeritsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryMeritsMenuClose"></i>
@@ -1467,7 +1470,7 @@
                         <div class="o-wrapper-flaws hidden-md-up">
 
                             <nav class="c-menu c-menu--slide-bottom">
-                                <div class="slide-down-button" ng-click="openHideFlawsCategoriesFilterMenu()">
+                                <div class="slide-down-button" ng-click="openHideFlawsCategoriesFilterMenu()" hm-swipeup="openHideFlawsCategoriesFilterMenu()" hm-swipedown="openHideFlawsCategoriesFilterMenu()">
                                     Категория
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryFlawsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryFlawsMenuClose"></i>
@@ -1662,7 +1665,7 @@
                         <div class="o-wrapper-spells hidden-md-up">
 
                             <nav class="c-menu c-menu--slide-bottom">
-                                <div class="slide-down-button" ng-click="openHideSpellsCategoriesFilterMenu()">
+                                <div class="slide-down-button" ng-click="openHideSpellsCategoriesFilterMenu()" hm-swipeup="openHideSpellsCategoriesFilterMenu()" hm-swipedown="openHideSpellsCategoriesFilterMenu()">
                                     Категория
                                     <i class="fa fa-angle-double-down" ng-hide="isCategorySpellsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategorySpellsMenuClose"></i>
