--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -215,7 +215,7 @@
                                  ng-repeat="personage in personages | orderBy : 'id'">
                                 <div class="s1">
                                     <img class="avatar" ng-click="uploadPersonageAvatar(personage.id)"
-                                         ng-src="../uploadedImages/{{avatar(personage.id)}}"
+                                         ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{avatar(personage.id)}}"
                                          alt="Alternative text to the image">
                                 </div>
                                 <div class="s2">
