--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -28,7 +28,6 @@
     <script src="/node_modules/angular-hammer/angular.hammer.min.js"></script>
     <script src="/node_modules/jquery.scrollto/jquery.scrollTo.min.js"></script>
     <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
-    <script src="/node_modules/jquery-sortable/source/js/jquery-sortable-min.js"></script>
     <script src="/assets/common/js/common.min.js"></script>
     <script src="/assets/common/js/menu.js"></script>
     <script src="/assets/common/js/tooltip.min.js"></script>
@@ -125,7 +124,7 @@
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                            <a class="dropdown-item" href="#"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                            <a class="dropdown-item" href="/views/profile/profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
                                     class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
@@ -418,7 +417,7 @@
                             </div>
                             <div class="col-md-8">
                                 <table id="attrTable" class="table table-hover">
-                                    <tbody ng-repeat="personageAttribute in personageAttributes | orderBy: 'position'" ng-hide="ifMagic(personageAttribute)">
+                                    <tbody ng-repeat="personageAttribute in personageAttributes | orderBy:getAttributePosition" ng-hide="ifMagic(personageAttribute)">
                                     <tr>
                                         <td id="{{personageAttribute.Attribute.name}}"
                                             ng-click="showHideDescription(personageAttribute.Attribute)"
