--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -125,7 +125,7 @@
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                            <a class="dropdown-item" href="#"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                            <a class="dropdown-item" href="/views/profile/profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
                                     class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
@@ -400,7 +400,7 @@
                             </div>
                             <div class="col-md-8">
                                 <table id="attrTable" class="table table-hover">
-                                    <tbody ng-repeat="personageAttribute in personageAttributes | orderBy: 'position'"
+                                    <tbody ng-repeat="personageAttribute in personageAttributes | orderBy:getAttributePosition"
                                            ng-hide="ifMagic(personageAttribute)">
                                     <tr>
                                         <td id="{{personageAttribute.Attribute.name}}"
