--- a/public/views/races/race.html
+++ b/public/views/races/race.html
@@ -122,7 +122,7 @@
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                            <a class="dropdown-item" href="#"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                            <a class="dropdown-item" href="/views/profile/profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
                                     class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
