--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -103,7 +103,7 @@
                     </span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                        <a class="dropdown-item" href="#"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                        <a class="dropdown-item" href="/views/profile/profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
                                 class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
@@ -216,7 +216,7 @@
                                 <div class="s1">
                                     <img class="avatar" ng-click="uploadPersonageAvatar(personage.id)"
                                          ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{avatar(personage.id)}}"
-                                         alt="Alternative text to the image">
+                                         alt="Здесь должен быть аватар">
                                 </div>
                                 <div class="s2">
                                     <h4>{{personage.name}}</h4>
