--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -120,7 +120,7 @@
                            aria-expanded="false">
                             <span class="user-name"><strong>{{player.name}}</strong></span>
                             <span class="avatar" href="#">
-                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Avatar">
+                        <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}" alt="Avatar">
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
