--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -115,7 +115,7 @@
                            aria-expanded="false">
                             <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
                             <span class="avatar" href="#">
-                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
+                        <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}" alt="Avatar">
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
@@ -156,7 +156,7 @@
                     <div class="panel">
                         <h3 class="panel-heading text-center">{{player.name}}</h3>
                         <div class="panel-body">
-                            <img class="user-avatar" ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/avatar.png"
+                            <img  ng-click="uploadPersonageAvatar(player.id)" class="user-avatar" ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                                  alt="Здесь должен быть аватар">
                         </div>
                     </div>
