--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -99,7 +99,7 @@
                     <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                         <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
                         <span class="avatar" href="#">
-                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
+                        <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}" alt="Здесь должен быть аватар">
                     </span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
