--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -276,7 +276,7 @@
                                 <label class="control-label col-sm-2" for="inherent_id" style="padding-left: 8% !important;padding-top: 0.5%;">Особенность: </label>
 
                                 <div class="col-sm-5">
-                                    <select class="form-control selectpicker"
+                                    <select class="form-control"
                                             ng-model="inherent_id" id="inherent_id"
                                             ng-options="inherent.id as inherent.name for inherent in inherents">
                                         <option style="display:none" value="">Выберите особенность...</option>
