--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/dropify/dist/css/dropify.min.css">
 
     <!-- Vendors Scripts -->
     <!-- v1.0.0 -->
@@ -22,6 +23,7 @@
     <script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
 
     <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+    <script src="/node_modules/dropify/dist/js/dropify.min.js"></script>
     <!-- Clean UI Scripts -->
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
@@ -156,7 +158,7 @@
                     <div class="panel">
                         <h3 class="panel-heading text-center">{{player.name}}</h3>
                         <div class="panel-body">
-                            <img  ng-click="uploadPersonageAvatar(player.id)" class="user-avatar" ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
+                            <img style="cursor: pointer" ng-click="uploadPlayerAvatar(player.id)" class="user-avatar" ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                                  alt="Здесь должен быть аватар">
                         </div>
                     </div>
