--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -184,10 +184,10 @@
                            class="btn btn-icon icmn-pencil btn-link"
                            href="javascript: void(0);" style="box-shadow: 0 0; padding: 0"></a>
                         <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
-                            <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
-                            <a class="dropdown-item" href="javascript: void(0)">Возраст: {{personage.age}} лет</a>
+                            <a class="dropdown-item text">Раса: {{personage.Race.name}}</a>
+                            <a class="dropdown-item text">Возраст: {{personage.age}} лет</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="javascript: void(0)">Опыт: {{personage.experience}}</a>
+                            <a class="dropdown-item text">Опыт: {{personage.experience}}</a>
                         </ul>
                         <button ng-show="hideEditBlock" ng-disabled="personage.experience < 0" type="button"
                                 class="btn btn-success btn-sm margin-inline margin-top-10" style="margin-left: 5em"
