--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -166,10 +166,10 @@
                     <a class="btn btn-rounded btn-danger-outline margin-10"
                        href="edit_personage.html?id={{personage.id}}">Прокачать!</a>
                     <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
-                        <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
-                        <a class="dropdown-item" href="javascript: void(0)">Возраст: {{personage.age}} лет</a>
+                        <a class="dropdown-item text">Раса: {{personage.Race.name}}</a>
+                        <a class="dropdown-item text">Возраст: {{personage.age}} лет</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript: void(0)">Опыт: {{personage.experience}}</a>
+                        <a class="dropdown-item text">Опыт: {{personage.experience}}</a>
                     </ul>
                 </div>
             </h3>
