--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -37,7 +37,7 @@
     <script src="edit_personage.js"></script>
     <script src="../permissions/check_player_permissions.js"></script>
 </head>
-<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp" ng-cloak>
+<body class="theme-default menu-left layout-boxed mode-box-shadow" ng-app="personageApp" ng-cloak>
 <div id="loader"></div>
 <div class="boxed-container" ng-controller="permissionsController">
     <div ng-controller="personageController">
@@ -164,37 +164,45 @@
         <section class="page-content hide">
 
             <div class="panel">
-                <h3 class="panel-heading" style="padding-bottom: 0">
+                <div class="panel-heading">
+                    <h3 class="text-center">Создание персонажа</h3>
                     <div class="dropdown">
-                        <a class="dropdown-toggle color-primary" href="" data-toggle="dropdown" aria-expanded="false"
-                           ng-show="hideEditBlock">
-                            {{personage.name}}<span style="font-size: 12px"> (прокачка)</span>
-                            <span class="ink animate"></span>
-                        </a>
-                        <form ng-hide="hideEditBlock" novalidate>
-                            <div class="group">
-                                <i class="icmn-checkmark3 personage-name" style="cursor: pointer" ng-click="savePersonageName()"></i>
-                                <input class="name-material-form" ng-blur="savePersonageName()" ng-keypress="saveIfEnterPress($event)" type="text" required>
-                                <span class="highlight"></span>
-                                <span class="bar"></span>
-                                <label class="name-material-form">{{oldName}}</label>
-                            </div>
-                        </form>
-                        <a ng-click="hideEditBlock = false" ng-show="hideEditBlock"
-                           class="btn btn-icon icmn-pencil btn-link"
-                           href="javascript: void(0);" style="box-shadow: 0 0; padding: 0"></a>
-                        <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
-                            <a class="dropdown-item text">Раса: {{personage.Race.name}}</a>
-                            <a class="dropdown-item text">Возраст: {{personage.age}} лет</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text">Опыт: {{personage.experience}}</a>
-                        </ul>
-                        <button ng-show="hideEditBlock" ng-disabled="personage.experience < 0" type="button"
-                                class="btn btn-success btn-sm margin-inline margin-top-10" style="margin-left: 5em" ng-click="savePersonage()">
-                            Сохранить
-                        </button>
+                        <h3>
+                            <a class="dropdown-toggle color-primary" href="" data-toggle="dropdown"
+                               aria-expanded="false"
+                               ng-show="hideEditBlock">
+                                {{personage.name}}
+                                <span class="ink animate"></span>
+                            </a>
+
+                            <form ng-hide="hideEditBlock" novalidate>
+                                <div class="group" style="margin-top: -20px;">
+                                    <i class="icmn-checkmark3 personage-name" style="cursor: pointer"
+                                       ng-click="savePersonageName()"></i>
+                                    <input class="name-material-form" ng-blur="savePersonageName()"
+                                           ng-keypress="saveIfEnterPress($event)" type="text" required>
+                                    <span class="highlight"></span>
+                                    <span class="bar"></span>
+                                    <label class="name-material-form">{{oldName}}</label>
+                                </div>
+                            </form>
+
+                            <a ng-click="hideEditBlock = false" ng-show="hideEditBlock"
+                               class="btn btn-icon icmn-pencil btn-link"
+                               href="javascript: void(0);" style="box-shadow: 0 0; padding: 0"></a>
+                            <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
+                                <a class="dropdown-item text">Раса: {{personage.Race.name}}</a>
+                                <a class="dropdown-item text">Возраст: {{personage.age}} лет</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text">Опыт: {{personage.experience}}</a>
+                            </ul>
+                        </h3>
                     </div>
-                </h3>
+                    <button ng-show="hideEditBlock" ng-disabled="personage.experience < 0" type="button"
+                            class="btn btn-info btn-rounded pull-right"
+                            ng-click="savePersonage()"><strong>СОХРАНИТЬ</strong>
+                    </button>
+                </div>
                 <div class="panel-body">
                     <div class="table-responsive hidden-md-up" id="steps">
                         <table id="buttons" class="table">
@@ -226,15 +234,31 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="hidden-xs-down hidden-sm-down">
-                        <button class="btn margin-inline inherentsButton active">Особенности</button>
-                        <button class="btn margin-inline attributesButton">Атрибуты</button>
-                        <button class="btn margin-inline attachedButton">Прикрепленные навыки</button>
-                        <button class="btn margin-inline triggerButton">Тригерные навыки</button>
-                        <button class="btn margin-inline meritsButton">Достоинства</button>
-                        <button class="btn margin-inline flawsButton">Недостатки</button>
-                        <button class="btn margin-inline spellsButton">Заклинания</button>
-                        <button class="btn margin-inline notesButton">Заметки</button>
+                    <div class="hidden-xs-down hidden-sm-down createEditDiv">
+                        <button class="btn createEditTabs inherentsButton active">ОСОБЕННОСТИ
+                            <div class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs attributesButton">АТРИБУТЫ
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs attachedButton">ПРИКРЕПЛЕННЫЕ НАВЫКИ
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs triggerButton">ТРИГЕРНЫЕ НАВЫКИ
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs meritsButton">ДОСТОИНСТВА
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs flawsButton">НЕДОСТАТКИ
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs spellsButton">ЗАКЛИНАНИЯ
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
+                        <button class="btn createEditTabs notesButton">ЗАМЕТКИ
+                            <div style="display: none" class="arrow-down"></div>
+                        </button>
                     </div>
 
                     <div id="inherents" class="tab-pane active table-responsive" role="tabpanel">
