--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -165,7 +165,7 @@
 
             <div class="panel">
                 <div class="panel-heading">
-                    <h3 class="text-center">Создание персонажа</h3>
+                    <h3 class="text-center">Прокачка персонажа</h3>
                     <div class="dropdown">
                         <h3>
                             <a class="dropdown-toggle color-primary" href="" data-toggle="dropdown"
