--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -188,8 +188,8 @@
                             </form>
 
                             <a ng-click="hideEditBlock = false" ng-show="hideEditBlock"
-                               class="btn btn-icon icmn-pencil btn-link"
-                               href="javascript: void(0);" style="box-shadow: 0 0; padding: 0"></a>
+                               class="btn btn-icon icmn-pencil btn-link editButton"
+                               href="javascript: void(0);"></a>
                             <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
                                 <a class="dropdown-item text">Раса: {{personage.Race.name}}</a>
                                 <a class="dropdown-item text">Возраст: {{personage.age}} лет</a>
