--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
 
 </head>
-<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageManagerApp">
+<body class="theme-default menu-left layout-boxed mode-box-shadow" ng-app="personageManagerApp">
 <div class="boxed-container" ng-controller="permissionsController">
 
     <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
