--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -199,7 +199,7 @@
                         </h3>
                     </div>
                     <button ng-show="hideEditBlock" ng-disabled="personage.experience < 0" type="button"
-                            class="btn btn-info btn-rounded pull-right"
+                            class="btn btn-info btn-rounded pull-right save-personage"
                             ng-click="savePersonage()"><strong>СОХРАНИТЬ</strong>
                     </button>
                 </div>
