--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -668,7 +668,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="addedAttachedSkillsFilter" name="added" type="checkbox"
-                                           ng-model="addedAttachedSkillsFilter">
+                                           ng-model="addedAttachedSkillsFilter" ng-change="openDetails = []">
                                     <label for="addedAttachedSkillsFilter">
                                         Имеющиеся
                                     </label>
@@ -940,7 +940,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="addedTriggerSkillsFilter" name="added" type="checkbox"
-                                           ng-model="addedTriggerSkillsFilter">
+                                           ng-model="addedTriggerSkillsFilter" ng-change="openDetails = []">
                                     <label for="addedTriggerSkillsFilter">
                                         Имеющиеся
                                     </label>
@@ -1203,7 +1203,7 @@
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="addedMeritsFilter" name="added" type="checkbox"
-                                           ng-model="addedMeritsFilter">
+                                           ng-model="addedMeritsFilter" ng-change="openDetails = []">
                                     <label for="addedMeritsFilter">
                                         Имеющиеся
                                     </label>
@@ -1482,7 +1482,7 @@
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="addedSpellsFilter" name="addedSpellsFilter" type="checkbox"
-                                           ng-model="addedSpellsFilter">
+                                           ng-model="addedSpellsFilter" ng-change="openDetails = []">
                                     <label for="addedSpellsFilter">
                                         Имеющиеся
                                     </label>
