--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -688,7 +688,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="addedAttachedSkillsFilter" name="added" type="checkbox"
-                                           ng-model="addedAttachedSkillsFilter">
+                                           ng-model="addedAttachedSkillsFilter" ng-change="openDetails = []">
                                     <label for="addedAttachedSkillsFilter">
                                         Имеющиеся
                                     </label>
@@ -962,7 +962,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="addedTriggerSkillsFilter" name="added" type="checkbox"
-                                           ng-model="addedTriggerSkillsFilter">
+                                           ng-model="addedTriggerSkillsFilter" ng-change="openDetails = []">
                                     <label for="addedTriggerSkillsFilter">
                                         Имеющиеся
                                     </label>
@@ -1227,7 +1227,7 @@
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="addedMeritsFilter" name="added" type="checkbox"
-                                           ng-model="addedMeritsFilter">
+                                           ng-model="addedMeritsFilter" ng-change="openDetails = []">
                                     <label for="addedMeritsFilter">
                                         Имеющиеся
                                     </label>
@@ -1494,7 +1494,7 @@
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="addedFlawsFilter" name="added" type="checkbox"
-                                           ng-model="addedFlawsFilter">
+                                           ng-model="addedFlawsFilter" ng-change="openDetails = []">
                                     <label for="addedFlawsFilter">
                                         Имеющиеся
                                     </label>
@@ -1692,7 +1692,7 @@
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="addedSpellsFilter" name="addedSpellsFilter" type="checkbox"
-                                           ng-model="addedSpellsFilter">
+                                           ng-model="addedSpellsFilter" ng-change="openDetails = []">
                                     <label for="addedSpellsFilter">
                                         Имеющиеся
                                     </label>
