--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Erilon login page</title>
+    <title>Login</title>
 
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 
@@ -29,7 +29,8 @@
             <div class="single-page-block-inner effect-3d-element">
                 <div class="blur-placeholder"><!-- --></div>
                 <div class="single-page-block-form">
-                    <h3 class="text-center" ng-i18next="[html]login_label">
+                    <h3 class="text-center"><span ng-i18next>login_label</span>
+                        <i class="fa fa-key pull-right"></i>
                     </h3>
                     <small ng-i18next>enter_nick_name</small>
                     <br/>
