--- a/public/views/attributes/attribute_manager.html
+++ b/public/views/attributes/attribute_manager.html
@@ -165,17 +165,17 @@
 
             <div class="panel">
                 <div class="panel-heading">
-                    <h3 class="display-inline margin-inline">Атрибуты</h3>
+                    <h3 class="display-inline margin-inline" ng-i18next>attributes_header</h3>
                 </div>
                 <div class="panel-body">
 
                     <table id="attributesTable" class="table nowrap" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th>Имя</th>
-                            <th>Бонус на действия</th>
-                            <th>Описание</th>
-                            <th>Действия</th>
+                            <th ng-i18next>attributes_table_header_name</th>
+                            <th ng-i18next>attributes_table_header_action_bonus</th>
+                            <th ng-i18next>attributes_table_header_description</th>
+                            <th ng-i18next>attributes_table_header_actions</th>
                         </tr>
                         </thead>
                     </table>
